--- a/fff.html
+++ b/fff.html
@@ -3,25 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>FFF</title>
-	<style>
-		* {
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-		}	
-		.container {
-			display: -webkit-inline-flex;
-			display: -moz-inline-flex;
-			display: -ms-inline-flex;
-			display: -o-inline-flex;
-			display: inline-flex;
-		}
-		img {
-			width: 100vh;
-			height: 105vh;
-		}
-
-	</style>
+	<link rel="stylesheet" href="css/fff.css">
 </head>
 <body>
 	<div class="container"><img src="image/三次元FFF团.gif" alt=""><img src="image/三次元FFF团.gif" alt=""><img src="image/三次元FFF团.gif" alt=""></div>
