--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<div class="container"><img src="image/三次元FFF团.gif" alt=""><img src="image/三次元FFF团.gif" alt=""><img src="image/三次元FFF团.gif" alt=""></div>
 	
 	<h3> 什麼你說今天是白色情人節?</h3>
+	<h4> Click </h4>
 	<script src="js/fff.js"></script>
 </body>
 </html>
